--- a/wiki/de/BIM_Workbench.html
+++ b/wiki/de/BIM_Workbench.html
@@ -5,7 +5,7 @@
 <li><a href="../fr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier BIM (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="BIM radni stol (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Ambiente BIM (68% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pracy BIM (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy BIM (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Bancada de trabalho BIM (17% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; BIM (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="BIM&#12527;&#12540;&#12463;&#12505;&#12531;&#12481; (2% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -190,9 +190,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Classification.svg&amp;filetimestamp=20240608121117&amp;.html" class="mw-file-description"><img src="../File/BIM_Classification.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/BIM_Classification.html" title="BIM Classification/de">Klassifizierung</a>: Verwaltet, wie Objekte und Materialien des Projekts mit Klassifizierungssystemen wie <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Uniclass">Uniclass</a> in Beziehung stehen.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/BIM_Layers.html" title="BIM Layers/de">Ebenen</a>: Verwaltet die Ebenen des Dokuments.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/BIM_Material.html" title="BIM Material/de">Material</a>: Verwaltet die Materialien mittels <a href="../de/Arch_SetMaterial.html" title="Arch SetMaterial/de">MaterialZuordnen</a> oder <a href="../de/Arch_MultiMaterial.html" title="Arch MultiMaterial/de">MehrfachMaterial</a> f&uuml;r ausgew&auml;hlte Objekte</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="BIM_ReportTools">Report Tools:</span></li></ul>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Report.html" title="BIM Report">BIM Report</a>: Creates a new BIM Report to query model data with SQL. <span style="font-size:small;"><a href="../Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span></li></ul></dd></dl>
 </div>
@@ -372,34 +370,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115103817
+Cached time: 20260115165106
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.392 seconds
-Real time usage: 0.516 seconds
-Preprocessor visited node count: 878/1000000
+CPU time usage: 0.404 seconds
+Real time usage: 0.771 seconds
+Preprocessor visited node count: 877/1000000
 Post&#8208;expand include size: 24321/2097152 bytes
 Template argument size: 9482/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2096/5000000 bytes
+Unstrip post&#8208;expand size: 2101/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.582      1 -total
- 47.03%   13.441      1 Template:BIM_Tools_navi/de
- 32.68%    9.340      2 Template:Navigation_menu_2
- 11.15%    3.187      7 Template:VersionPlus/de
-  9.86%    2.818      2 Template:Docnav/de
-  9.20%    2.631      1 Template:Userdocnavi/de
-  5.89%    1.684      1 Template:MenuCommand
-  5.64%    1.611      1 Template:Version
-  5.14%    1.470      1 Template:TOCright
+100.00%   26.339      1 -total
+ 48.13%   12.678      1 Template:BIM_Tools_navi/de
+ 25.32%    6.670      2 Template:Navigation_menu_2
+ 11.91%    3.137      7 Template:VersionPlus/de
+  9.82%    2.587      2 Template:Docnav/de
+  9.29%    2.447      1 Template:Userdocnavi/de
+  5.52%    1.453      1 Template:MenuCommand
+  5.03%    1.326      1 Template:Version
+  4.39%    1.157      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:181417-0!canonical and timestamp 20260115103816 and revision id 1738666. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:181417-0!canonical and timestamp 20260115165105 and revision id 1738839. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
