--- a/wiki/de/BIM_Setup.html
+++ b/wiki/de/BIM_Setup.html
@@ -4,7 +4,7 @@
 <li><a href="../es/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Configuration des BIM (78% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="Setup BIM (22% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--high" title="BIM: Konfiguracja &#347;rodowiska (78% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM: Konfiguracja &#347;rodowiska (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../ru/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -57,8 +57,9 @@
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <p>Das Einstellungssystem von FreeCAD, das sich im Men&uuml; unter <b>Bearbeiten &rarr; Einstellungen</b> befindet, ist sehr komplex. Der Dialog <b>BIM-Einstellungen</b> bietet eine vereinfachte Version davon, indem er einige der f&uuml;r die BIM-Arbeit am h&auml;ufigsten verwendeten Einstellungen in einer einfachen Anzeige zusammenfasst. Jede &Auml;nderung dort hat den gleichen Effekt, wie die &Auml;nderung der entsprechenden Einstellung in den Voreinstellungen.
+</p><p><span id="Usage"></span>
 </p>
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
+<h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
 <ol><li>There are several ways to invoke the tool:
 <ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Setup.html" title="BIM Setup">BIM Setup</a></span> button.</li>
 <li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BIM Setup</b> option from the menu.</li></ul></li></ol>
@@ -115,33 +116,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101703
+Cached time: 20260115165253
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 358/1000000
+CPU time usage: 0.080 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 359/1000000
 Post&#8208;expand include size: 24951/2097152 bytes
 Template argument size: 9693/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1560/5000000 bytes
+Unstrip post&#8208;expand size: 1565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.995      1 -total
- 46.26%    8.324      1 Template:BIM_Tools_navi/de
- 27.31%    4.914      2 Template:Navigation_menu_2
- 14.77%    2.658      1 Template:GuiCommand/de
- 11.58%    2.084      1 Template:Userdocnavi/de
- 11.49%    2.067      2 Template:Docnav/de
-  6.85%    1.233      1 Template:Button
-  6.02%    1.083      2 Template:MenuCommand
+100.00%   20.910      1 -total
+ 53.72%   11.233      1 Template:BIM_Tools_navi/de
+ 22.74%    4.755      2 Template:Navigation_menu_2
+ 12.18%    2.546      2 Template:Docnav/de
+ 12.13%    2.537      1 Template:GuiCommand/de
+  9.52%    1.990      1 Template:Userdocnavi/de
+  5.58%    1.167      1 Template:Button
+  4.71%    0.985      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201277-0!canonical and timestamp 20260115101703 and revision id 1738633. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201277-0!canonical and timestamp 20260115165253 and revision id 1738847. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
