--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -115,7 +115,7 @@
 <ul><li><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Syst&eacute;m online n&aacute;pov&#283;dy - Obsah</a></li></ul>
 <p><span id="More"></span>
 </p>
-<h2><span id="D.C3.A1le"></span><span class="mw-headline" id="D&aacute;le">D&aacute;le</span></h2>
+<h2><span id="Dal.C5.A1.C3.AD"></span><span class="mw-headline" id="Dal&scaron;&iacute;">Dal&scaron;&iacute;</span></h2>
 <div class="mw-translate-fuzzy">
 <ul><li><a href="../cs/Power_users_hub.html" title="Power users hub/cs">Roz&scaron;&iacute;&#345;en&eacute; u&#382;ivatelsk&eacute; centrum</a> je m&iacute;sto kam se m&#367;&#382;ete pod&iacute;vat na dal&scaron;&iacute; mo&#382;nosti vyu&#382;it&iacute; FreeCADu</li>
 <li><a rel="nofollow" class="external text" href="http://yorik.uncreated.net/guestblog.php?tag=freecad">Architektonick&eacute; pr&aacute;ce</a>: P&#345;&iacute;klad jak FreeCAD m&#367;&#382;e za&#269;&iacute;t z&iacute;sk&aacute;vat svou pozici v architektonick&eacute; pr&aacute;ci...</li>
@@ -141,12 +141,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115165255
+Cached time: 20260115165328
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.115 seconds
-Real time usage: 0.209 seconds
+CPU time usage: 0.103 seconds
+Real time usage: 0.203 seconds
 Preprocessor visited node count: 294/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -157,17 +157,17 @@ Unstrip post&#8208;expand size: 4295/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.178      1 -total
- 31.15%    6.596      1 Template:Userdocnavi/cs
- 16.62%    3.519      7 Template:Incode
- 14.64%    3.100      1 Template:TOCright
- 13.81%    2.924      2 Template:VersionMinus
- 13.80%    2.922      1 Template:Navigation_menu_2
-  9.98%    2.114      3 Template:Version
-  9.16%    1.940      1 Template:Button
+100.00%   11.259      1 -total
+ 43.52%    4.900      1 Template:Userdocnavi/cs
+ 21.41%    2.411      1 Template:Navigation_menu_2
+ 12.89%    1.451      7 Template:Incode
+ 10.31%    1.161      3 Template:Version
+  9.36%    1.054      1 Template:TOCright
+  8.41%    0.947      1 Template:Button
+  8.41%    0.947      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115165255 and revision id 1738849. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115165328 and revision id 1738851. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
