--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -48,7 +48,7 @@
 <p><a href="../index.php?title=Template;Versi%C3%B3n&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Versi&oacute;n (page does not exist)">Template:Versi&oacute;n</a>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados con <code>D</code> a continuaci&oacute;n. P&oacute;dese activar un banco de traballo desactivado nas preferencias <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferencias</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s do men&uacute; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>[Image:Toolbar_flyout_arrow.svg</span> do selector <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench</a>.
 </p>
 </div>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. This is not really a workbench, but rather a category of 'standard' commands and tools that can be used in all workbenches.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. Este non &eacute; realmente un banco de traballo, sen&oacute;n unha categor&iacute;a de comandos e ferramentas "est&aacute;ndar" que se poden usar en todos os bancos de traballo.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> for building and solving mechanical assemblies. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a> for working with architectural elements and creating <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> models. It combines the Arch Workbench and the formerly external BIM Workbench available in <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../CAM_Workbench.html" title="CAM Workbench">CAM Workbench</a> is used to produce G-Code instructions. This workbench was called "Path Workbench" in <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
@@ -93,12 +93,12 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115171217
+Cached time: 20260115171245
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.195 seconds
+CPU time usage: 0.130 seconds
+Real time usage: 0.215 seconds
 Preprocessor visited node count: 217/1000000
 Post&#8208;expand include size: 2241/2097152 bytes
 Template argument size: 399/2097152 bytes
@@ -109,18 +109,18 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.053      1 -total
- 23.53%    2.366      2 Template:Docnav
- 12.36%    1.243      5 Template:Incode
- 11.58%    1.164      1 Template:MenuCommand
- 10.56%    1.062      1 Template:Button
- 10.36%    1.042      2 Template:VersionMinus
- 10.18%    1.023      2 Template:Version
-  6.92%    0.696      1 Template:Userdocnavi/gl
-  6.54%    0.657      1 Template:Versi&oacute;n
+100.00%   17.037      1 -total
+ 22.57%    3.845      2 Template:Docnav
+ 15.99%    2.724      2 Template:VersionMinus
+ 14.63%    2.492      2 Template:Version
+ 11.82%    2.013      5 Template:Incode
+  8.33%    1.419      1 Template:MenuCommand
+  8.12%    1.384      1 Template:Button
+  5.98%    1.019      1 Template:Userdocnavi/gl
+  5.52%    0.941      1 Template:Versi&oacute;n
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115171217 and revision id 1738889. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115171245 and revision id 1738891. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
