--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -45,7 +45,7 @@
 <p>Os bancos de traballo que se listan a continuaci&oacute;n incl&uacute;ense con cada instalaci&oacute;n de FreeCAD.
 </p>
 <div class="mw-translate-fuzzy">
-<p><a href="../index.php?title=Template;Versi%C3%B3n&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Versi&oacute;n (page does not exist)">Template:Versi&oacute;n</a>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados con <code>D</code> a continuaci&oacute;n. P&oacute;dese activar un banco de traballo desactivado nas preferencias <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferencias</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s do men&uacute; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>[Image:Toolbar_flyout_arrow.svg</span> do selector <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench</a>.
+<p><a href="../index.php?title=Template;Versi%C3%B3n&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Versi&oacute;n (page does not exist)">Template:Versi&oacute;n</a>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados por debaixo con: <code>D</code>. P&oacute;dese activar un banco de traballo desactivado nas preferencias <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s de <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>[Image:Toolbar_flyout_arrow.svg</span> do selector <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
 </p>
 </div>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. Este non &eacute; realmente un banco de traballo, sen&oacute;n unha categor&iacute;a de comandos e ferramentas "est&aacute;ndar" que se poden usar en todos os bancos de traballo.</li></ul>
@@ -93,12 +93,12 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115171245
+Cached time: 20260115171555
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.215 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.211 seconds
 Preprocessor visited node count: 217/1000000
 Post&#8208;expand include size: 2241/2097152 bytes
 Template argument size: 399/2097152 bytes
@@ -109,18 +109,18 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.037      1 -total
- 22.57%    3.845      2 Template:Docnav
- 15.99%    2.724      2 Template:VersionMinus
- 14.63%    2.492      2 Template:Version
- 11.82%    2.013      5 Template:Incode
-  8.33%    1.419      1 Template:MenuCommand
-  8.12%    1.384      1 Template:Button
-  5.98%    1.019      1 Template:Userdocnavi/gl
-  5.52%    0.941      1 Template:Versi&oacute;n
+100.00%   13.201      1 -total
+ 22.59%    2.982      2 Template:Docnav
+ 16.70%    2.205      1 Template:MenuCommand
+ 14.20%    1.875      5 Template:Incode
+ 11.11%    1.466      1 Template:Button
+ 10.83%    1.430      2 Template:VersionMinus
+ 10.24%    1.352      2 Template:Version
+  4.96%    0.655      1 Template:Userdocnavi/gl
+  3.61%    0.476      1 Template:Versi&oacute;n
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115171245 and revision id 1738891. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115171555 and revision id 1738902. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
